--- a/en_us.lang
+++ b/en_us.lang
@@ -363,4 +363,4 @@ thaumic_arcana.research.counts_in_as=%s% of the result will be considered
 ######
 thaumic_arcana.tooltip.unused=Unused!
 thaumic_arcana.tooltip.infused_with=Infused with %s
-item.platn_ball.contains=Contains:
+item.plant_ball.contains=Contains:
