--- a/hu-hu.lang
+++ b/hu-hu.lang
@@ -76,7 +76,7 @@ research.thaumic_arcana.tree.stage.1=When I was growing plants, it wasn't too ha
 research.thaumic_arcana.tree.stage.2=The tree is more of a bush, but it is able to give me wood. I also need to add some vacuos to the formula, so I can improve the spatial conditions in there for long enough to make it so that it won't get stuck in my cauldron, or thaumatorium. <LINE>The leaves overgrew, and became so hard that I need to crack it open by smashing it to a wall.
 research.thaumic_arcana.tree.stage.3=The process causes a yield lower than expected. I don't think I should do this to plants where this problem didn't occur.
 
-research.thaumic_arcana.plantproducts.title=Biomanuafactury
+research.thaumic_arcana.plantproducts.title=Biomanufaktúra
 research.thaumic_arcana.plantproducts.stage.1= Now that I figured how to force plants to grow, I want to do something different. I want to see if I can fabricate products that would normally come from different plants in more flexible ways. <LINE> The first thing I want to try is to solve a problem that has been emerging during my work. I use a lot of paper while doing research and studies. <BR> I prepared a few candidates and samples that should be usable to create paper.
 research.thaumic_arcana.plantproducts.stage.2= I ended up choosing wood as the material for this. With the correct essentia, I can soften and reshape it's fibers to turn it into fine sheets of paper. <LINE> Now I want to do something different. I want to see if I could mold or even grow other resources. <BR> Making more of some dead plantmatter should do it.
 research.thaumic_arcana.plantproducts.stage.3= The dyes reacted well to my treatment.
